@@ -1,6 +1,7 @@
 import os
 import macro
 import config
+import doctypes
 import filecache
 import translation
 
@@ -16,16 +17,21 @@ class BaseTemplate(object):
         'text': translation.Compiler.from_text}
 
     format = 'xml'
+    implicit_doctype = doctypes.xhtml
+    explicit_doctype = None
     
     def __init__(self, body, parser, format=None, doctype=None):
         self.body = body
         self.parser = parser        
         self.signature = hash(body)
         self.registry = {}
+
         if format is not None:
             self.format = format
-        self.doctype = doctype
-            
+
+        if doctype is not None:            
+            self.explicit_doctype = doctype
+        
     @property
     def translate(self):
         return NotImplementedError("Must be provided by subclass.")
@@ -36,13 +42,16 @@ class BaseTemplate(object):
 
     @property
     def compiler(self):
-        return self.compilers[self.format](self.body, self.parser, self.doctype)
-    
+        return self.compilers[self.format](
+            self.body, self.parser,
+            implicit_doctype=self.implicit_doctype,
+            explicit_doctype=self.explicit_doctype)
+
     def cook(self, **kwargs):
         return self.compiler(**kwargs)
     
     def cook_check(self, macro, params):
-        key = self.signature, macro, params, self.doctype
+        key = self.signature, macro, params, self.explicit_doctype
         template = self.registry.get(key, None)
         if template is None:
             template = self.cook(macro=macro, params=params)
@@ -99,8 +108,9 @@ class BaseTemplateFile(BaseTemplate):
         
     def clone(self, filename, format=None):
         cls = type(self)
-        return cls(filename, self.parser, format=format,
-                   doctype=self.doctype, auto_reload=self.auto_reload)
+        return cls(
+            filename, self.parser, format=format,
+            doctype=self.explicit_doctype, auto_reload=self.auto_reload)
         
     def _get_filename(self):
         return getattr(self, '_filename', None)
