@@ -15,6 +15,10 @@ Version 1.0dev
 
   Features
 
+- Added compiler option to specify an implicit doctype; this is
+  currently used by the template classes to let the loose XHTML
+  doctype be the default. [malthe]
+  
 - Added support for translation of tag body. [malthe]
 
 - Added security configuration for the TALES iterator (repeat
